@@ -1,4 +1,6 @@
 1.9.2
+* Tools/bdb: new switch "-fixlen" to set up the uncompressed size of each block inside blockchain.new
+* Client: BlocksDB index file contains now also the uncompressed size of each block
 * Client/WebUI/Wallet: Export settings stores entire local storage
 * Client/WextUI: "balance" command lists mempool transaction related to the given address
 * Client: start it with "-b" switch to check the balances while loading UTXO.db
